--- a/html/about.html
+++ b/html/about.html
@@ -1,69 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About</title>
-    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/about.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-               an empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/about.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> an empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
     <h1>About Me</h1>
-      <div class="container">
-        <h2 class="subtitle">I'm a Computer Science student studying at <a href="https://www.online.drexel.edu/" target="_blank">Drexel University</a>.</h2>
+    <div class="container">
+      <h2 class="subtitle">
+        I'm a Computer Science student studying at
+        <a href="https://www.online.drexel.edu/" target="_blank"
+          >Drexel University</a
+        >.
+      </h2>
       <div class="description-container">
-        <p class="description">At Drexel, I am also pursuing minors in Data Science and UI/UX Design.</p>
-        <p class="description">Outside of school, photography has been a passion of mine for as long as I can remember. I love finding beauty in everyday life, and the feeling you get when you get the perfect shot.
+        <p class="description">
+          At Drexel, I am also pursuing minors in Data Science and UI/UX Design.
+        </p>
+        <p class="description">
+          I’ve always been passionate about solving complex problems and
+          building meaningful digital experiences, whether it's through clean,
+          efficient code or thoughtfully designed interfaces. My academics have
+          helped me build a wide range of skills in software development, data
+          analysis, and user-centered design, that I love applying to real-world
+          projects.
         </p>
       </div>
-    </div> 
+      <div class="container">
+        <h2 class="subtitle">
+          Outside of school, photography has been a passion of mine for as long
+          as I can remember.
+        </h2>
+        <div class="description-container">
+          <p class="description">
+            There’s something incredibly satisfying about getting the perfect
+            shot, where everything aligns just right. Photography gives me a
+            chance to slow down, appreciate the details, and see the world
+            through a different lens. It provides a creative outlet for me to
+            get away from the analytical aspects of college.
+          </p>
+          <p class="description">
+            I’m always looking for opportunities to learn, grow, and collaborate
+            with others. Whether it’s through a new project or a challenging
+            problem to solve, I’m eager to continue expanding my skills and
+            making a positive impact.
+          </p>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-          <a href="mailto:slb522@drexel.edu"
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
             <i class="bx bxs-envelope"></i>
           </a>
         </div>
       </div>
     </footer>
     <script src="../script/darkMode.js"></script>
-</body>
+  </body>
 </html>
