--- a/html/photos.html
+++ b/html/photos.html
@@ -1,65 +1,70 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Photos</title>
-    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/photos.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-               this empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/photos.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> this empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
     <h1>Photography</h1>
-    <p class="photo-descriptions">Here are some of the photos I've taken recently!</p>
-    <div class="photo-container" id="gallery">
-    </div>
-  <footer>
-    <div class="footer">
-      <h2 class="contact">Contact</h2>
-      <div class="links">
-        <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-        <a href="mailto:slb522@drexel.edu"
-          <i class="bx bxs-envelope"></i>
-        </a>
+    <p class="photo-descriptions">
+      Here are some of the photos I've taken recently!
+    </p>
+    <div class="photo-container" id="gallery"></div>
+    <footer>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
+            <i class="bx bxs-envelope"></i>
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
     <script src="../script/photos.js"></script>
     <script src="../script/darkMode.js"></script>
-</body>
+  </body>
 </html>
