--- a/html/places.html
+++ b/html/places.html
@@ -1,130 +1,197 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Places</title>
-        <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link href="../styles/style.css" rel="stylesheet" type="text/css">
-        <link href="../styles/photos.css" rel="stylesheet" type="text/css">
-    </head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Places</title>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/photos.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <header>
-        <a href="/" class="home">Sophia Bartolacci</a>
-        <nav class="nav-bar">
-            <ul class="nav-center">
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./resume.html">Resume</a></li>
-                <li><a href="./projects.html">Projects</a></li>
-                <li><a href="./photos.html">Photography</a></li>
-              </ul>
-          <ul class="nav-right">
-            <li>
-              <b>
-                <label class="empty">
-                   this empty box
-                </label>
-              </b>
-            </li>
-            <li>
-              <b>
-                <label class="theme-switch">
-                  <input type="checkbox" id="theme-toggle" />
-                  <span class="slider"></span>
-                </label>
-              </b>
-            </li>
-          </ul>
-        </nav>
-        </header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> this empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <h1>Places</h1>
-    <p class="photo-descriptions">Here are some photos I've taken of the places that I have visited all over the world!</p>
+    <p class="photo-descriptions">
+      Here are some photos I've taken of the places that I have visited all over
+      the world!
+    </p>
     <div class="photo-container2">
-        <div class="photo-categories">
-            <img src="../photos/places/1.jpg" alt="Photo of a fountain in Florida.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/2-florida.jpg" alt="Photo of an entrance for a driveway in Florida.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/3-florida.jpg" alt="Photo of a house in Florida.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/4-beach.jpg" alt="Photo of a crescent moon during sunset with a white fence.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/5-koi.jpg" alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/6-buddha.jpg" alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/7-shofuso.jpg" alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/8.jpg" alt="Photo of dam at the Philadelphia Museam of Art.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/9.jpg" alt="Photo of center city at sunset in Philadelphia, PA.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/10.jpg" alt="Photo of fresh snow in Philadelphia, PA.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/11.jpg" alt="Photo of the concrete ceiling at the Museum of Natural History in New York.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/12.jpg" alt="Photo of the sign at Red Rock State Park in Sedona, Arizona.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/13.jpg" alt="Wide view of the rocks at Red Rock State Park in Sedona, Arizona.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/14.jpg" alt="Photo of the Grand Canyon.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/15.jpg" alt="Photo of the Grand Canyon.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/16.jpg" alt="Photo of a waterfall at Yosemite National Park.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/17.jpg" alt="Action photo of a hummingbird on a flower in Jamaica.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/18-hummingbird.jpg" alt="Photo of a hummingbird sitting on a branch in Jamaica.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/19.jpg" alt="Photo of a stray cat taken in Jamaica.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/20-tables.jpg" alt="Photo of a table set at a sushi restaurant in Jamaica.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/21-sunset.jpg" alt="Photo of the sky during sunset in Long Beach Island, New Jersey.">
-        </div>
-        <div class="photo-categories">
-            <img src="../photos/places/22-lake.jpg" alt="Photo of the lake and the beach taken during sunset in Hazleton, PA.">
-        </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/1.jpg"
+          alt="Photo of a fountain in Florida."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/2-florida.jpg"
+          alt="Photo of an entrance for a driveway in Florida."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/3-florida.jpg"
+          alt="Photo of a house in Florida."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/4-beach.jpg"
+          alt="Photo of a crescent moon during sunset with a white fence."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/5-koi.jpg"
+          alt="Photo of koi fish at Shofuso Japanese Cultural Center in Philadelphia, PA."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/6-buddha.jpg"
+          alt="Photo of Buddha statue at Shofuso Japanese Cultural Center in Philadelphia, PA."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/7-shofuso.jpg"
+          alt="Photo of stone structure at Shofuso Japanese Cultural Center in Philadelphia, PA."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/8.jpg"
+          alt="Photo of dam at the Philadelphia Museam of Art."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/9.jpg"
+          alt="Photo of center city at sunset in Philadelphia, PA."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/10.jpg"
+          alt="Photo of fresh snow in Philadelphia, PA."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/11.jpg"
+          alt="Photo of the concrete ceiling at the Museum of Natural History in New York."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/12.jpg"
+          alt="Photo of the sign at Red Rock State Park in Sedona, Arizona."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/13.jpg"
+          alt="Wide view of the rocks at Red Rock State Park in Sedona, Arizona."
+        />
+      </div>
+      <div class="photo-categories">
+        <img src="../photos/places/14.jpg" alt="Photo of the Grand Canyon." />
+      </div>
+      <div class="photo-categories">
+        <img src="../photos/places/15.jpg" alt="Photo of the Grand Canyon." />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/16.jpg"
+          alt="Photo of a waterfall at Yosemite National Park."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/17.jpg"
+          alt="Action photo of a hummingbird on a flower in Jamaica."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/18-hummingbird.jpg"
+          alt="Photo of a hummingbird sitting on a branch in Jamaica."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/19.jpg"
+          alt="Photo of a stray cat taken in Jamaica."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/20-tables.jpg"
+          alt="Photo of a table set at a sushi restaurant in Jamaica."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/21-sunset.jpg"
+          alt="Photo of the sky during sunset in Long Beach Island, New Jersey."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="../photos/places/22-lake.jpg"
+          alt="Photo of the lake and the beach taken during sunset in Hazleton, PA."
+        />
+      </div>
     </div>
     <footer>
-        <div class="footer">
-          <h2 class="contact">Contact</h2>
-          <div class="links">
-            <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-            <a href="mailto:slb522@drexel.edu"
-              <i class="bx bxs-envelope"></i>
-            </a>
-          </div>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
+            <i class="bx bxs-envelope"></i>
+          </a>
         </div>
-      </footer>
-      <script src="../script/darkMode.js"></script>
-</body>
+      </div>
+    </footer>
+    <script src="../script/darkMode.js"></script>
+  </body>
 </html>
