--- a/html/giant.html
+++ b/html/giant.html
@@ -1,70 +1,83 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/giant.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-               empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/giant.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
     <h1>GIANT App Redesign</h1>
     <div>
       <h2 class="subtitle">Summary</h2>
     </div>
     <div>
-      <p class="description">I took on the challenge of redesigning GIANT's app using Figma to address the usability issues I noticed as a frequent user. The original app's navigation and overall design felt cluttered and unintuitive, so I set out to create a cleaner, more user-friendly interface. </p>
       <p class="description">
-        My redesign focused on streamlining navigation, enhancing the visual hierarchy, and improving the overall user experience. This project was my first experience with Figma, driven by a desire to learn the tool and apply my design skills to a real-world scenario. </p>
+        I took on the challenge of redesigning GIANT's app using Figma to
+        address the usability issues I noticed as a frequent user. The original
+        app's navigation and overall design felt cluttered and unintuitive, so I
+        set out to create a cleaner, more user-friendly interface.
+      </p>
+      <p class="description">
+        My redesign focused on streamlining navigation, enhancing the visual
+        hierarchy, and improving the overall user experience. This project was
+        my first experience with Figma, driven by a desire to learn the tool and
+        apply my design skills to a real-world scenario.
+      </p>
     </div>
 
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-          <a href="mailto:slb522@drexel.edu"
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
             <i class="bx bxs-envelope"></i>
           </a>
         </div>
       </div>
     </footer>
     <script src="../script/darkMode.js"></script>
-</body>
+  </body>
 </html>
