--- a/html/portraits.html
+++ b/html/portraits.html
@@ -1,94 +1,128 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portraits</title>
-        <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link href="../styles/style.css" rel="stylesheet" type="text/css">
-        <link href="../styles/photos.css" rel="stylesheet" type="text/css">
-    </head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-               empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portraits</title>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/photos.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
     <h1>Portraits</h1>
-    <p class="photo-descriptions">Here are some portraits I've taken of my friends and family on our fun adventures!</p>
+    <p class="photo-descriptions">
+      Here are some portraits I've taken of my friends and family on our fun
+      adventures!
+    </p>
     <div class="photo-container2">
-        <div class="photo-categories">
-            <img src="/photos/portraits/1.jpg" alt="Photo of Selena on a rock overlooking the lake.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/2.jpg" alt="Photo of Selena looking at the waterfall from behind a tree.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/3.jpg" alt="Photo of Owen leaning on a metal block.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/4.jpg" alt="Photo of Selena posing in front of a large rock.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/5-s&s.jpg" alt="Photo of Sofia and Selena looking at each other from opposite sides of a tree.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/6.jpg" alt="Photo of Selena applying lipstick at the Renaissance Faire.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/7-crown.jpg" alt="Photo of the back of Selena's head wearing a crown at the Renaissance Faire.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/8.jpg" alt="Photo of Selena dressed as a pirate, holding a chess piece at the Renaissance Faire.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/9-luna.jpg" alt="Portrait Photo of Luna.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/portraits/10-luna.jpg" alt="Portrait photo of Luna.">
-        </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/1.jpg"
+          alt="Photo of Selena on a rock overlooking the lake."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/2.jpg"
+          alt="Photo of Selena looking at the waterfall from behind a tree."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/3.jpg"
+          alt="Photo of Owen leaning on a metal block."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/4.jpg"
+          alt="Photo of Selena posing in front of a large rock."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/5-s&s.jpg"
+          alt="Photo of Sofia and Selena looking at each other from opposite sides of a tree."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/6.jpg"
+          alt="Photo of Selena applying lipstick at the Renaissance Faire."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/7-crown.jpg"
+          alt="Photo of the back of Selena's head wearing a crown at the Renaissance Faire."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/8.jpg"
+          alt="Photo of Selena dressed as a pirate, holding a chess piece at the Renaissance Faire."
+        />
+      </div>
+      <div class="photo-categories">
+        <img src="/photos/portraits/9-luna.jpg" alt="Portrait Photo of Luna." />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/portraits/10-luna.jpg"
+          alt="Portrait photo of Luna."
+        />
+      </div>
     </div>
     <footer>
-        <div class="footer">
-          <h2 class="contact">Contact</h2>
-          <div class="links">
-            <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-            <a href="mailto:slb522@drexel.edu"
-              <i class="bx bxs-envelope"></i>
-            </a>
-          </div>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
+            <i class="bx bxs-envelope"></i>
+          </a>
         </div>
-      </footer>
-      <script src="../script/darkMode.js"></script>
-</body>
+      </div>
+    </footer>
+    <script src="../script/darkMode.js"></script>
+  </body>
 </html>
