--- a/html/resume.html
+++ b/html/resume.html
@@ -1,61 +1,73 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resume</title>
-    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="../styles/style.css" rel="stylesheet" type="text/css">
-    <link href="../styles/resume.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-               empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/resume.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <h1>Resume</h1>
+    <h1>
+      Resume
+      <a href="../Resume.pdf" download>
+        <i class="bx bx-download"></i>
+      </a>
+    </h1>
+    <div class="resume">
+      <img src="../Resume.png" alt="Resume" />
+    </div>
     <footer>
       <div class="footer">
         <h2 class="contact">Contact</h2>
         <div class="links">
-          <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-          <a href="mailto:slb522@drexel.edu"
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
             <i class="bx bxs-envelope"></i>
           </a>
         </div>
       </div>
     </footer>
     <script src="../script/darkMode.js"></script>
-</body>
+  </body>
 </html>
