--- a/html/sae.html
+++ b/html/sae.html
@@ -1,78 +1,97 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Drexel Electric Racing</title>
-        <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <link href="../styles/style.css" rel="stylesheet" type="text/css">
-        <link href="../styles/photos.css" rel="stylesheet" type="text/css">
-    </head>
-<body>
-  <header>
-    <a href="/" class="home">Sophia Bartolacci</a>
-    <nav class="nav-bar">
-      <ul class="nav-center">
-        <li><a href="./about.html">About</a></li>
-        <li><a href="./resume.html">Resume</a></li>
-        <li><a href="./projects.html">Projects</a></li>
-        <li><a href="./photos.html">Photography</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li>
-          <b>
-            <label class="empty">
-                empty box
-            </label>
-          </b>
-        </li>
-        <li>
-          <b>
-            <label class="theme-switch">
-              <input type="checkbox" id="theme-toggle" />
-              <span class="slider"></span>
-            </label>
-          </b>
-        </li>
-      </ul>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Drexel Electric Racing</title>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link href="../styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="../styles/photos.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header>
+      <a href="/" class="home">Sophia Bartolacci</a>
+      <nav class="nav-bar">
+        <ul class="nav-center">
+          <li><a href="./about.html">About</a></li>
+          <li><a href="./resume.html">Resume</a></li>
+          <li><a href="/">Projects</a></li>
+          <li><a href="./photos.html">Photography</a></li>
+        </ul>
+        <ul class="nav-right">
+          <li>
+            <b>
+              <label class="empty"> empty box </label>
+            </b>
+          </li>
+          <li>
+            <b>
+              <label class="theme-switch">
+                <input type="checkbox" id="theme-toggle" />
+                <span class="slider"></span>
+              </label>
+            </b>
+          </li>
+        </ul>
+      </nav>
     </header>
     <h1>Drexel Electric Racing</h1>
-    <p class="description">Here are some photos I've taken for the 
-        <a href="https://orgs.coe.drexel.edu/formulaev/" target="_blank">Drexel Electric Racing Club</a>!
+    <p class="description">
+      Here are some photos I've taken for the
+      <a href="https://orgs.coe.drexel.edu/formulaev/" target="_blank"
+        >Drexel Electric Racing Club</a
+      >!
     </p>
     <div class="photo-container2">
-        <div class="photo-categories">
-            <img src="/photos/sae/1-tire.jpg" alt="Photo of a Hoosier tire on the electric car.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/sae/2-owen.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/sae/3-owen.jpg" alt="Photo of Owen using an angle grinder on the electric car.">
-        </div>
-        <div class="photo-categories">
-            <img src="/photos/sae/4-jack.jpg" alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car.">
-        </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/sae/1-tire.jpg"
+          alt="Photo of a Hoosier tire on the electric car."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/sae/2-owen.jpg"
+          alt="Photo of Owen using an angle grinder on the electric car."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/sae/3-owen.jpg"
+          alt="Photo of Owen using an angle grinder on the electric car."
+        />
+      </div>
+      <div class="photo-categories">
+        <img
+          src="/photos/sae/4-jack.jpg"
+          alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car."
+        />
+      </div>
     </div>
     <footer>
-        <div class="footer">
-          <h2 class="contact">Contact</h2>
-          <div class="links">
-            <a href="https://github.com/sophiabartolacci" target="_blank"
-              <i class="bx bxl-github"></i>
-            </a>
-            <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
-              <i class="bx bxl-linkedin-square"></i>
-            </a>
-            <a href="mailto:slb522@drexel.edu"
-              <i class="bx bxs-envelope"></i>
-            </a>
-          </div>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" target="_blank">
+            <i class="bx bxl-github"></i>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/sophiabartolacci/"
+            target="_blank"
+          >
+            <i class="bx bxl-linkedin-square"></i>
+          </a>
+          <a href="mailto:slb522@drexel.edu">
+            <i class="bx bxs-envelope"></i>
+          </a>
         </div>
-      </footer>
-      <script src="../script/darkMode.js"></script>
-</body>
+      </div>
+    </footer>
+    <script src="../script/darkMode.js"></script>
+  </body>
 </html>
