--- a/index.html
+++ b/index.html
@@ -4,61 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sophia Bartolacci</title>
-    <link rel="icon" type="image/x-icon" href="./favicon_io/favicon.ico">
+    <title>Projects</title>
+    <link rel="icon" type="image/x-icon" href="../favicon_io/favicon.ico">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="./styles/style.css" rel="stylesheet" type="text/css">
     <link href="./styles/projects.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <header>
-      <a href="/" class="home">Sophia Bartolacci</a>
-      <nav class="nav-bar">
-        <ul class="nav-center">
-          <li><a href="./html/about.html">About</a></li>
-          <li><a href="./html/resume.html">Resume</a></li>
-          <li><a href="./html/projects.html">Projects</a></li>
-          <li><a href="./html/photos.html">Photography</a></li>
-        </ul>
-        <ul class="nav-right">
-          <li>
-            <b>
-              <label class="empty">
-                 this empty box
-              </label>
-            </b>
-          </li>
-          <li>
-            <b>
-              <label class="theme-switch">
-                <input type="checkbox" id="theme-toggle" />
-                <span class="slider"></span>
-              </label>
-            </b>
-          </li>
-        </ul>
-      </nav>
-      </header>
-      <h1>Hi! I'm Sophia.</h1>
-      <div class="link-boxes">
-        <a href="./html/about.html" class="link-box">About</a>
-        <a href="./html/projects.html" class="link-box">Projects</a>
-        <a href="./html/photos.html" class="link-box">Photography</a>
+  <header>
+    <a href="/" class="home">Sophia Bartolacci</a>
+    <nav class="nav-bar">
+      <ul class="nav-center">
+        <li><a href="./html/about.html">About</a></li>
+        <li><a href="./html/resume.html">Resume</a></li>
+        <li><a href="/">Projects</a></li>
+        <li><a href="./html/photos.html">Photography</a></li>
+      </ul>
+      <ul class="nav-right">
+        <li>
+          <b>
+            <label class="empty">
+               empty box
+            </label>
+          </b>
+        </li>
+        <li>
+          <b>
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle" />
+              <span class="slider"></span>
+            </label>
+          </b>
+        </li>
+      </ul>
+    </nav>
+    </header>
+    <h1>Hi! I'm Sophia</h1>
+    <p class="subtitle">
+      I’m a Computer Science student at
+      <a href="https://www.online.drexel.edu/" target="_blank"
+        >Drexel University</a> with a passion for creating innovative digital experiences.
+    </p>
+    <div class="link-boxes">
+        <a href="./html/giant.html" class="link-box"> 
+          <span class="above-text">Figma</span> 
+          <div class="box-title">Redesign of GIANT's App</div>
+          <img src="../images/giant.png" alt="Giant App">
+        </a>
+        <a href="./html/blueboard.html" class="link-box">
+          <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
+          <div class="box-title">Blueboard</div>
+          <img src="../images/blueboard-login.png" alt="Login Page for Blueboard">
+        </a>
+        <a href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html" target="_blank" class="link-box">
+          <span class="above-text">A Project From My First Computer Science Class</span> 
+          <div class="box-title">Animal Crossing State Machine</div>
+          <img src="../images/animal-crossing.jpeg" alt="Animal Crossing Project Image">
+        </a>
       </div>
-      <footer>
-          <h2 class="contact">Contact</h2>
-          <div class="links">
-            <a href="https://github.com/sophiabartolacci" target="_blank"
+    <footer>
+      <div class="footer">
+        <h2 class="contact">Contact</h2>
+        <div class="links">
+          <a href="https://github.com/sophiabartolacci" target="_blank"
               <i class="bx bxl-github"></i>
             </a>
             <a href="https://www.linkedin.com/in/sophiabartolacci/" target="_blank"
               <i class="bx bxl-linkedin-square"></i>
             </a>
-            <a href="mailto:slb522@drexel.edu"
-              <i class="bx bxs-envelope"></i>
-            </a>
-          </div>
-      </footer>
-  <script src="./script/darkMode.js"></script>
+          <a href="mailto:slb522@drexel.edu"
+            <i class="bx bxs-envelope"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+    <script src="../script/darkMode.js"></script>
 </body>
 </html>
