update resume and about

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         >Drexel University</a> with a passion for creating innovative digital experiences.
     </p>
     <div class="link-boxes">
-        <a href="./html/giant.html" class="link-box"> 
+        <a href="https://www.figma.com/community/file/1431462238976577710/giant-app-redesign" target="_blank" class="link-box"> 
           <span class="above-text">Figma</span> 
           <div class="box-title">Redesign of GIANT's App</div>
           <img src="../images/giant.png" alt="Giant App">
