update: added responsive columns for photos    - need to fix layout for when there are three columns and one extra column at bottom

--- a/portraits.html
+++ b/portraits.html
@@ -55,24 +55,15 @@
         Here are some portraits I've taken of my friends and family on our fun
         adventures!
       </p>
-      <div class="photos">
+      <div class="container">
         <div class="column">
           <img
             src="photos/portraits/1-selena.webp"
             alt="Selena on a rock overlooking the lake."
           />
           <img
-            src="photos/portraits/3-owen.webp"
-            alt="Owen leaning on a metal block."
-          />
-          <img
             src="photos/portraits/5-s&s.webp"
             alt="Sofia and Selena looking at each other from opposite sides of a tree."
-            loading="lazy"
-          />
-          <img
-            src="photos/portraits/7-crown.webp"
-            alt="the back of Selena's head wearing a crown at the Renaissance Faire"
             loading="lazy"
           />
           <img
@@ -86,25 +77,35 @@
             src="photos/portraits/2-selena.webp"
             alt="Selena looking at the waterfall from behind a tree."
           />
-
-          <img
-            src="photos/portraits/4-selena.webp"
-            alt="Selena posing in front of a large rock."
-          />
-
           <img
             src="photos/portraits/6-selena.webp"
             alt="Selena applying lipstick at the Renaissance Faire."
-            loading="lazy"
-          />
-          <img
-            src="photos/portraits/8-selena.webp"
-            alt="Selena dressed as a pirate, holding a chess piece at the Renaissance Faire"
-            loading="lazy"
           />
           <img
             src="photos/portraits/10-luna.webp"
             alt="Luna, a tortishell cat"
+            loading="lazy"
+          />
+        </div>
+        <div class="column">
+          <img
+            src="photos/portraits/3-owen.webp"
+            alt="Owen leaning on a metal block."
+          />
+          <img
+            src="photos/portraits/7-crown.webp"
+            alt="the back of Selena's head wearing a crown at the Renaissance Faire"
+            loading="lazy"
+          />
+        </div>
+        <div class="column">
+          <img
+            src="photos/portraits/4-selena.webp"
+            alt="Selena posing in front of a large rock."
+          />
+          <img
+            src="photos/portraits/8-selena.webp"
+            alt="Selena dressed as a pirate, holding a chess piece at the Renaissance Faire"
             loading="lazy"
           />
         </div>
