--- a/sae.html
+++ b/sae.html
@@ -58,15 +58,11 @@
         >
         in action!
       </p>
-      <div class="photos">
+      <div class="container">
         <div class="column">
           <img
             src="photos/sae/1-tire.webp"
             alt="Photo of a Hoosier tire on the electric car."
-          />
-          <img
-            src="photos/sae/3-owen.webp"
-            alt="Photo of Owen using an angle grinder on the electric car."
           />
         </div>
         <div class="column">
@@ -74,6 +70,14 @@
             src="photos/sae/2-owen.webp"
             alt="Photo of Owen using an angle grinder on the electric car."
           />
+        </div>
+        <div class="column">
+          <img
+            src="photos/sae/3-owen.webp"
+            alt="Photo of Owen using an angle grinder on the electric car."
+          />
+        </div>
+        <div class="column">
           <img
             src="photos/sae/4-jack.webp"
             alt="Photo of Jack placing a segment of lithium ion cells into the accumulator for the electric car."
