update: adjust boxes and main image    - separated website link box as a separate div to prevent wrapping    - added picture tag to switch between small, medium, and large      images for different screen sizes

--- a/blueboard.html
+++ b/blueboard.html
@@ -53,44 +53,53 @@
       <h1>
         <a href="https://cs375blueboard.fly.dev/" target="_blank">Blueboard</a>
       </h1>
-      <img
-        src="./images/blueboard-login.webp"
-        alt="Blueboard Login Screen"
-        class="login-image"
-      />
+      <div class="login-image">
+        <picture>
+          <source
+            media="(min-width: 1280px)"
+            srcset="./images/blueboard-larger.png"
+          />
+          <source
+            media="(min-width: 650px)"
+            srcset="./images/blueboard-medium.png"
+          />
+          <source />
+          <img
+            src="./images/blueboard-smaller.webp"
+            alt="Blueboard Login Screen"
+          />
+        </picture>
+      </div>
       <div class="link-boxes">
-        <div class="link-box">
-          <div class="box-title">
-            <!-- <div class="description"> -->
-            <div class="website">
-              <p>
-                Explore our full
-                <a href="https://cs375blueboard.fly.dev/" target="_blank"
-                  >website</a
-                >!
-              </p>
-            </div>
+        <div id="link-box2">
+          <!-- <div class="box-title">Overview</div> -->
+          <div class="website">
+            <a href="https://cs375blueboard.fly.dev/" target="_blank"
+              >Explore our full website!</a
+            >
           </div>
         </div>
+      </div>
+      <div class="link-boxes">
         <div class="link-box">
           <div class="box-title">Overview</div>
           <div class="description">
-            <p>
+            <li>
               In my web development class, I collaborated with a group of five
               over five weeks to create
               <a href="https://cs375blueboard.fly.dev/" target="_blank"
                 >Blueboard</a
               >, an interactive online learning platform designed for both
               students and professors.
-            </p>
-            <p>
+            </li>
+            <li>
               Blueboard offers a variety of tools to enhance the learning
               experience, including quizzes, course materials, and more.
-            </p>
-            <p>
+            </li>
+            <li>
               This project allowed us to work together to design and implement a
               user-friendly platform that supports both teaching and learning.
-            </p>
+            </li>
           </div>
         </div>
         <div class="link-box">
