update: uncomment "logo" for nav bar    - uncommented the "logo" for a desktop style navigation    - added text for cover photos for photos.html

--- a/about.html
+++ b/about.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html" class="home">Sophia Bartolacci</a>
-      <i class="bx bx-menu"></i> -->
+      <a href="index.html" class="home">Sophia Bartolacci</a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden />
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
