--- a/blueboard.html
+++ b/blueboard.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html" class="home">Sophia Bartolacci</a>
-      <i class="bx bx-menu"></i> -->
+      <a href="index.html" class="home">Sophia Bartolacci</a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden />
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
@@ -72,7 +71,6 @@
       </div>
       <div class="link-boxes">
         <div id="link-box2">
-          <!-- <div class="box-title">Overview</div> -->
           <div class="website">
             <a href="https://cs375blueboard.fly.dev/" target="_blank"
               >Explore our full website!</a
