--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html" class="home">Sophia Bartolacci</a>
-      <i class="bx bx-menu"></i> -->
+      <a href="index.html" class="home">Sophia Bartolacci</a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden />
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
@@ -52,54 +51,57 @@
     <main>
       <h1>Hi! I'm Sophia</h1>
       <p>
-        I’m Sophia Bartolacci, a Computer Science student studying at
-        <a href="https://drexel.edu/" target="_blank">Drexel University</a>.
+        I’m a Computer Science student at
+        <a href="https://drexel.edu/" target="_blank">Drexel University</a> with
+        a passion for creating innovative digital experiences.
       </p>
-      <div class="link-boxes">
-        <a
-          href="https://www.figma.com/community/file/1431462238976577710/giant-app-redesign"
-          target="_blank"
-          class="link-box"
-        >
-          <span class="above-text">Figma</span>
-          <div class="box-title">Redesign of GIANT's App</div>
-          <img src="images/giant.png" alt="Giant App" />
-        </a>
-        <a href="blueboard.html" class="link-box">
-          <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
-          <div class="box-title">Blueboard</div>
-          <img
-            src="images/blueboard-login.webp"
-            alt="Login Page for Blueboard"
-          />
-        </a>
-        <a
-          href="https://www.figma.com/design/odTDbvIB13dxQiV7OsLK2Y/SAE?node-id=0-1&t=DQmo6AsRvrwDJrNN-1"
-          class="link-box"
-        >
-          <span class="above-text">Wordpress, Figma</span>
-          <div class="box-title">
-            Redesign of Drexel Electric Racing's Website (WIP)
-          </div>
-          <img
-            src="images/sae-home.webp"
-            alt="Home page for Drexel Electric Racing"
-          />
-        </a>
-        <a
-          href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html"
-          target="_blank"
-          class="link-box"
-        >
-          <span class="above-text"
-            >A Project From My First Computer Science Class</span
+      <div class="container">
+        <div class="link-boxes">
+          <a
+            href="https://www.figma.com/community/file/1431462238976577710/giant-app-redesign"
+            target="_blank"
+            class="link-box"
           >
-          <div class="box-title">Animal Crossing State Machine</div>
-          <img
-            src="images/animal-crossing.webp"
-            alt="Animal Crossing Project Image"
-          />
-        </a>
+            <span class="above-text">Figma</span>
+            <div class="box-title">Redesign of GIANT's App</div>
+            <img src="images/giant.png" alt="Giant App" />
+          </a>
+          <a href="blueboard.html" class="link-box">
+            <span class="above-text">Fly.io, Node.js, PostgreSQL</span>
+            <div class="box-title">Blueboard</div>
+            <img
+              src="images/blueboard-login.webp"
+              alt="Login Page for Blueboard"
+            />
+          </a>
+          <a
+            href="https://www.figma.com/design/odTDbvIB13dxQiV7OsLK2Y/SAE?node-id=0-1&t=DQmo6AsRvrwDJrNN-1"
+            class="link-box"
+          >
+            <span class="above-text">Wordpress, Figma</span>
+            <div class="box-title">
+              Redesign of Drexel Electric Racing's Website (WIP)
+            </div>
+            <img
+              src="images/sae-home.webp"
+              alt="Home page for Drexel Electric Racing"
+            />
+          </a>
+          <a
+            href="https://www.cs.drexel.edu/~slb522/CS164/reindeer.html"
+            target="_blank"
+            class="link-box"
+          >
+            <span class="above-text"
+              >A Project From My First Computer Science Class</span
+            >
+            <div class="box-title">Animal Crossing State Machine</div>
+            <img
+              src="images/animal-crossing.webp"
+              alt="Animal Crossing Project Image"
+            />
+          </a>
+        </div>
       </div>
     </main>
     <footer>
