--- a/photos.html
+++ b/photos.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html" class="home">Sophia Bartolacci</a>
-      <i class="bx bx-menu"></i> -->
+      <a href="index.html" class="home">Sophia Bartolacci</a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden />
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
@@ -53,25 +52,28 @@
       <h1>Photography</h1>
       <p>Here are some of the photos I've taken recently!</p>
       <div class="photo-categories">
-        <a href="places.html">
+        <a href="places.html" class="photo-card">
           <img
             src="photos/coverPhotos/places.webp"
             alt="cover image for photo gallery of places"
           />
+          <div class="photo-title">Places</div>
         </a>
-        <a href="portraits.html">
+        <a href="portraits.html" class="photo-card">
           <img
             src="photos/coverPhotos/portraits.webp"
             alt="cover image for photo gallery of portraits"
             loading="lazy"
           />
+          <div class="photo-title">Portraits</div>
         </a>
-        <a href="sae.html">
+        <a href="sae.html" class="photo-card">
           <img
             src="photos/coverPhotos/sae.webp"
             alt="cover image for photo gallery of Drexel Electric Racing"
             loading="lazy"
           />
+          <div class="photo-title">FSAE</div>
         </a>
       </div>
     </main>
