--- a/portraits.html
+++ b/portraits.html
@@ -31,8 +31,7 @@
   </head>
   <body>
     <header>
-      <!-- <a href="index.html" class="home">Sophia Bartolacci</a>
-      <i class="bx bx-menu"></i> -->
+      <a href="index.html" class="home">Sophia Bartolacci</a>
       <input type="checkbox" id="nav-toggle" class="nav-toggle" hidden />
       <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
