update: wrap li elements in ul to address error report issue

--- a/blueboard.html
+++ b/blueboard.html
@@ -82,22 +82,25 @@
         <div class="link-box">
           <div class="box-title">Overview</div>
           <div class="description">
-            <li>
-              In my web development class, I collaborated with a group of five
-              over five weeks to create
-              <a href="https://cs375blueboard.fly.dev/" target="_blank"
-                >Blueboard</a
-              >, an interactive online learning platform designed for both
-              students and professors.
-            </li>
-            <li>
-              Blueboard offers a variety of tools to enhance the learning
-              experience, including quizzes, course materials, and more.
-            </li>
-            <li>
-              This project allowed us to work together to design and implement a
-              user-friendly platform that supports both teaching and learning.
-            </li>
+            <ul>
+              <li>
+                In my web development class, I collaborated with a group of five
+                over five weeks to create
+                <a href="https://cs375blueboard.fly.dev/" target="_blank"
+                  >Blueboard</a
+                >, an interactive online learning platform designed for both
+                students and professors.
+              </li>
+              <li>
+                Blueboard offers a variety of tools to enhance the learning
+                experience, including quizzes, course materials, and more.
+              </li>
+              <li>
+                This project allowed us to work together to design and implement
+                a user-friendly platform that supports both teaching and
+                learning.
+              </li>
+            </ul>
           </div>
         </div>
         <div class="link-box">
