update: change image file name for error report issue

--- a/portraits.html
+++ b/portraits.html
@@ -61,7 +61,7 @@
             alt="Selena on a rock overlooking the lake."
           />
           <img
-            src="photos/portraits/5-s&s.webp"
+            src="photos/portraits/5-ss.webp"
             alt="Sofia and Selena looking at each other from opposite sides of a tree."
             loading="lazy"
           />
